# rl-traces-bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline.env  chunked_prefill.env  mtp.env
docs/: 2026-07-20-task-log.md  editable-vllm.md  methodology.md  metrics.md  quickstart.md  roadmap.md
examples/: compare_mtp.sh  compare_smoke.sh  mock_server.py  smoke.sh
examples/env/: baseline.env  mtp.env
run/: hsg_static_batch.sbatch  mock_chat_server.py  run_batch.sh  smoke_mock.sh
scripts/: analyze.py  compare.py  distributions.py  gen_trace.py  metrics.py  probe_traces.py  prompt_model.py  turn_structure.py
serve/: serve_super_bf16_hsg.sh
specs/: 2026-07-19-rl-long-tail-reproducer-design.md  2026-07-19-rl-long-tail-reproducer-plan.md
src/rl_traces_bench/: __init__.py  analyze.py  cli.py  compare.py  config.py  distributions.py  doctor.py  gen_trace.py  metrics.py  prompt_model.py  provenance.py  report_html.py  run.py  serve.py  tau2_estimator.py  turn_structure.py
tests/: test_analyze.py  test_cli.py  test_compare.py  test_config.py  test_distribution_input.py  test_distributions.py  test_doctor.py  test_gen_trace.py  test_golden.py  test_metrics.py  test_prompt_model.py  test_provenance.py  test_report_html.py  test_run.py  test_skills.py  test_tau2_estimator.py  test_turn_structure.py
tests/fixtures/: profile_export_sample.jsonl  turn_counts_sample.json
traces/: README.md  trace_b4096_per_turn_seed0.jsonl.stats.json  trace_b512_per_rollout_seed0.jsonl.stats.json  trace_b512_per_turn_seed0.jsonl.stats.json
(+12 files in other folders)
